<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_saved"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_cart" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_order"
        android:title="@string/nav_orders" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_vector"
        android:title="@string/nav_account" />

</menu>
